# nanojvm

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  sources.mk
.github/: CODEOWNERS
.github/workflows/: build-test-linux.yml  c-cpp.yml  cmake-single-platform.yml
lib/: Makefile
lib/miniz/: miniz.d
nanojvm-classfile/: CMakeLists.txt  README.md
nanojvm-classfile/scripts/: attributes.txt  djb2.py
nanojvm-classfile/src/: attribute.c  classfile.h  constant_pool.c  constants.h  field.c  iterators.h  method.c  reader.c  utils.c
nanojvm-common/: CMakeLists.txt
nanojvm-common/src/: commons.h  djb2.c  logging.c  math.c  memcmp.c  memory.c  reader.c  strlen.c  strrchr.c
nanojvm-core/: CMakeLists.txt
nanojvm-core/src/: executor.c  interpreter.c  nanojvm.c  nanojvm.h
nanojvm-core/src/object/: allocator.c
nanojvm-core/src/util/: array_stack.c  array_stack.h  heap.c  memory_region_ll.c  memory_region_ll.h
nanojvm-tests/: CMakeLists.txt
nanojvm-tests/java/: Test1.java
nanojvm-tests/src/: test_array_stack.c  test_classfile.c  test_heap.c  test_main.c
scripts/: init.sh  update.sh
src/: arrays.c  exec_manager.c  execution_manager.c  interpreter.c  main.c  nanojvm.c  nanojvm.h  objects.c  objects.h  throw.c  vmopts.c  vmopts.h
src/mem/: exstack.c  exstack.h  heap.c  heap.h  memutils.h
src/memory/: heap.c  heap.h  opstack.c  opstack.h  utils.c  utils.h
src/platform/: natives.h  natives_common.c  natives_linux.c
src/util/: assertions.c  assertions.h  exstack.c  exstack.h  jdk.c  logging.c  logging.h  strings.c  strings.h
std/: Makefile
std/src/io/nanojvm/: Console.java
std/src/io/nanojvm/intrinsics/: Memory.java  Naked.java
std/src/io/nanojvm/shenenigans/: MethodHook.java  RuntimeInstrumentation.java
std/src/java/lang/: Boolean.java  Byte.java  Class.java  ClassNotFoundException.java  Error.java  Exception.java  Integer.java  Long.java  NullPointerException.java  Object.java  RuntimeException.java  Short.java  String.java  Throwable.java
std/src/java/lang/annotation/: Annotation.java
tests/: ExceptionTest.java  Loops.java  Main1.java  Makefile  README.md
